<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group
        android:id="@+id/groupOptions"
        >


        <item
            android:title="@string/menu_contact"
            android:id="@+id/menuContact"
            android:onClick="onClickContact"
            >
        </item>

        <item
            android:title="@string/menu_about"
            android:id="@+id/menuAbout"
            android:onClick="onClickAbout"
            >
        </item>

    </group>


<group
    android:id="@+id/groupStar"
    >

    <item android:id="@+id/menu_star"
        android:title="@string/likes"
        android:icon="@drawable/ic_star"
        app:showAsAction="always"
        android:onClick="onRatingAction"
        >

    </item>






</group>

</menu>

